{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 40,
  "lineage": "d7732f45-e133-7ccb-69df-a674dc6e35d1",
  "resources": [
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-demo",
            "location": "japaneast",
            "name": "nsg-demo",
            "resource_group_name": "foch-resource-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAllOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/routeTables/route-default",
            "location": "japaneast",
            "name": "route-default",
            "resource_group_name": "foch-resource-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "demo",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-01",
            "name": "vm-subnet-01",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "foch-resource-rg",
            "virtual_network_name": "demo-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo",
            "module.networks.azurerm_virtual_network.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-02",
            "name": "vm-subnet-02",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "foch-resource-rg",
            "virtual_network_name": "demo-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo",
            "module.networks.azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-01",
            "network_security_group_id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-demo",
            "subnet_id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo",
            "module.networks.azurerm_network_security_group.demo",
            "module.networks.azurerm_subnet.subnets",
            "module.networks.azurerm_virtual_network.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-02",
            "network_security_group_id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-demo",
            "subnet_id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo",
            "module.networks.azurerm_network_security_group.demo",
            "module.networks.azurerm_subnet.subnets",
            "module.networks.azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-01",
            "route_table_id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/routeTables/route-default",
            "subnet_id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo",
            "module.networks.azurerm_route_table.demo",
            "module.networks.azurerm_subnet.subnets",
            "module.networks.azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b9577891-be03-4c9f-aa94-d92ec2d80deb",
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet",
            "location": "japaneast",
            "name": "demo-vnet",
            "resource_group_name": "foch-resource-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-01",
                "name": "vm-subnet-01",
                "security_group": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-demo"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-02",
                "name": "vm-subnet-02",
                "security_group": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-demo"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/networkInterfaces/nic-vm-0",
            "internal_domain_name_suffix": "sf2fpoidx0puzkuu1exmfwan3d.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-vm-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/vm-subnet-01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "japaneast",
            "mac_address": "00-22-48-69-98-40",
            "name": "nic-vm-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "foch-resource-rg",
            "virtual_machine_id": "/subscriptions/7a04a24c-df7a-4830-9f44-548548293c9c/resourceGroups/foch-resource-rg/providers/Microsoft.Compute/virtualMachines/vm-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo",
            "module.networks.azurerm_subnet.subnets",
            "module.networks.azurerm_virtual_network.demo"
          ]
        }
      ]
    }
  ]
}